@@ -1,7 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-# 'borrowed' from gtk-2.0/docs/reference/gtk
-
 # The name of the module.
 DOC_MODULE=rsvg
 
@@ -12,13 +10,13 @@ DOC_MAIN_SGML_FILE=rsvg-docs.sgml
 DOC_SOURCE_DIR=..
 
 # Extra options to pass to gtkdoc-scangobj
-SCANGOBJ_OPTIONS=--type-init-func="g_type_init ()" 
+SCANGOBJ_OPTIONS= --nogtkinit --type-init-func="g_type_init ()" 
 
 # Extra options to supply to gtkdoc-scan
 SCAN_OPTIONS=--deprecated-guards=RSVG_DISABLE_DEPRECATED
 
 # Extra options to supply to gtkdoc-mkdb
-MKDB_OPTIONS = --sgml-mode --output-format=xml --ignore-files=trio
+MKDB_OPTIONS= --sgml-mode --output-format=xml
 
 # Extra options to supply to gtkdoc-fixref
 FIXXREF_OPTIONS=
@@ -45,18 +43,24 @@ IGNORE_HFILES= \
 	svg.h
 
 # Images to copy into HTML directory
-HTML_IMAGES =
+HTML_IMAGES=
+
+EXTRA_HFILES=
 
 # Extra SGML files that are included by $(DOC_MAIN_SGML_FILE)
-content_files =
+content_files=
 
 # Other files to distribute
-extra_files =
+extra_files=
 
 # CFLAGS and LDFLAGS for compiling scan program. Only needed
 # if $(DOC_MODULE).types is non-empty.
 GTKDOC_CFLAGS = -I$(top_srcdir) $(LIBRSVG_CFLAGS)
 
-GTKDOC_LIBS = $(LIBRSVG_LIBS)
+GTKDOC_LIBS = $(top_builddir)/librsvg-2.la $(LIBRSVG_LIBS)
 
+if ENABLE_GTK_DOC
 include $(top_srcdir)/gtk-doc.make
+CLEANFILES += rsvg-scan.*
+.PHONY : dist-hook-local
+endif
